# iris-artificial-neuron

./: Cargo.toml  Cross.toml  flake.nix
src/: components.rs  draw.rs  line_graph.rs  main.rs  neuron.rs  separation_graph.rs  state.rs  train_data.rs
