[package]
name = "iris-neuron-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
raylib = { version = "5.0.1" }
serde = { version = "1.0.203", features = ["derive"] }

[target.x86_64-unknown-linux-gnu.dependencies]
raylib = { version = "5.0.1", features = ["wayland"] }